--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-      <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather" rel="stylesheet">
-      <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
     <link href="css/coming-soon.min.css" rel="stylesheet">
@@ -39,12 +39,12 @@
     <div class="social-icons">
       <ul class="list-unstyled text-center mb-0">
         <li class="list-unstyled-item">
-          <a href="#">
+          <a href="https://www.malt.fr/profile/mikeleman">
             <i class="fas fa-briefcase"></i>
           </a>
         </li>
         <li class="list-unstyled-item">
-          <a href="#">
+          <a href="https://github.com/after83">
             <i class="fab fa-github"></i>
           </a>
         </li>
