--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="Mike Leman , portfolio developpeur web front end / back end" />
     <title>Mike Leman | Portfolio</title>
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather" rel="stylesheet">
@@ -32,7 +33,7 @@
           <div class="col-12 my-auto">
             <div class="masthead-content text-white py-5 py-md-0">
               <h1 class= "title">Mike Leman</h1>
-              <p class=" about"><font size="2">Bonjour je m'appele Mike je suis un developpeur web freelance.Pour plus d'information veillez regarder mon profil freelance en cliquant sur l'icone de birefcase .Si vous ête interesser veillez m'envoyer un mail a cette adresse </font><strong>leman.mike@hotmail.com</strong></p>
+              <p class=" about"><font size="2">Bonjour je m'appele Mike je suis un developpeur web freelance.Pour plus d'information veillez regarder mon profil freelance en cliquant sur l'icone de birefcase .Si vous êtes interesser veillez m'envoyer un mail à cette adresse </font><strong>leman.mike@hotmail.com</strong></p>
 
               </div>
             </div>
