--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="col-12 my-auto">
             <div class="masthead-content text-white py-5 py-md-0">
               <h1 class= "title">Mike Leman</h1>
-              <p class=" about"><font size="2">Bonjour je m'appele Mike je suis un developpeur web freelance.Pour plus d'information veillez regarder mon profil freelance en cliquant sur l'icone de birefcase .Si vous êtes interesser veillez m'envoyer un mail à cette adresse </font><strong>leman.mike@hotmail.com</strong></p>
+              <p class=" about"><font size="2">Bonjour je m'appele Mike je suis un développeur web freelance.<br> Pour plus d'informations veuillez regarder mon profil freelance en cliquant sur l'icône de birefcase . <br> Si vous êtes intéressé veuillez m'envoyer un mail à cette adresse </font><strong>leman.mike@hotmail.com</strong></p>
 
               </div>
             </div>
